// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`uint32 schema test invalid values: -1 1`] = `
"expect(received).toMatchSchema(schema)

received
  must be >= 0
    Path:     dataTypes/uint32.schema.json#/minimum
"
`;

exports[`uint32 schema test invalid values: 1.5 1`] = `
"expect(received).toMatchSchema(schema)

received
  must be integer
    Path:     dataTypes/uint32.schema.json#/type
"
`;

exports[`uint32 schema test invalid values: 4294967296 1`] = `
"expect(received).toMatchSchema(schema)

received
  must be <= 4294967295
    Path:     dataTypes/uint32.schema.json#/maximum
"
`;
